--- a/BlogApp/Blog.Presentation/Views/_ViewImports.cshtml
+++ b/BlogApp/Blog.Presentation/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Blog.Presentation
 @using Blog.Presentation.Models
+@using Blog.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
